@@ -1,3 +1,8 @@
+2012-04-17 Riccardo Mottola <rm@gnu.org>
+
+	* Modules/Debuggers/ProjectCenter/PTYView.m
+	Fix imports and includes for FreeBSD
+
 2011-09-08 Riccardo Mottola <rm@gnu.org>
 
 	* Framework/PCAddFilesPanel.m [-setFileTypes]:
